# autofeeder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg.example.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  ntp.rs
