[package]
name = "autofeeder"
version = "0.1.0"
authors = ["Cody Lee <cody@reliablereefs.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.75"
embedded-svc = "=0.26.4"
esp-idf-svc  = "=0.47.3"
shtcx        = "=0.11.0"
toml-cfg     = "=0.1.3"
wifi         = { path = "./wifi" }
serde = { features = ["derive"], version = "1.0.130" }
serde_json = "1.0"

[build-dependencies]
embuild  = "=0.31.4"
toml-cfg = "=0.1.3"
